package Messages;

message Helo {
    required uint32 userId = 1;
    required int32 chunkSize = 2;
}

message Put {
    required bytes idTransaction = 1;
    required uint32 msgSize = 2;
    required bytes checkSum = 3;
}

message Ack {
    required uint32 chunkNumber = 1;
    required EndType type = 2 [default = ACK];
}

message Data {
    required uint32 chunkNumber = 1;
    required bytes data = 2;
}

enum EndType {
    ACK = 1;
    ACK_END = 2;
    DROP_END = 3;
}
